syntax = "proto3";
import "google/api/annotations.proto";
import "api/messages.proto";

option go_package = "pb/";

package todo;


  service TodoList {
    rpc Get (TodoId) returns (TodoItem) {
      option (google.api.http) = {
        get : "/v1/todo/{id}"
      };
    }
    rpc GetAll (Empty) returns (TodoItems) {
      option (google.api.http) = {
        get : "/v1/todo"
      };
    }
    rpc Create(TodoItem) returns (TodoItem) {
      option (google.api.http) = {
        post : "/v1/todo/create"
        body : "*"
      };
    }
    rpc Update(TodoItem) returns (TodoItem) {
      option (google.api.http) = {
        post : "/v1/todo/update"
        body : "*"
      };
    }
    rpc Delete (TodoId) returns (Result) {
      option (google.api.http) = {
        delete : "/v1/todo/{id}"
      };
    }
    rpc Search (TodoSearch) returns (TodoItems) {
      option (google.api.http) = {
        post : "/v1/todo/search"
        body : "*"
      };
    }
  }

